[project]
name = "polars-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "matplotlib>=3.10.1",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "plotly>=6.0.0",
    "polars[all]>=1.24.0",
    "requests>=2.32.3",
    "seaborn>=0.13.2",
    "streamlit>=1.43.0",
]
